[package]
name = "with-baby-friendship"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
anyhow = "1.0.58"
chrono = "0.4.19"
dotenv = "0.15.0"
env_logger = "0.9.3"
kafka = "0.9.0"
log = "0.4.17"
neo4rs = "0.5.9"
r2d2 = "0.8.10"
rand = "0.8.5"
rdkafka = { version = "0.28.0", features=["tokio"] }
redis = { version = "0.21.5", features=["tokio-comp"] }
serde = "1.0.140"
serde_json = "1.0.82"
tokio = "1.20.0"
